# PE-gui

./: Makefile.am  README.md  configure.ac  skin.py
data/: Makefile.am  keymap.xml  radio.mvi  setup.xml  startwizard.xml
data/fonts/: Makefile.am
data/hw_info/: Makefile.am  hw_info.cfg
lib/python/Plugins/: Makefile.am
main/: bsod.cpp
tools/: enigma2.sh.in
